# seo-compass

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_tests.py  validate_setup.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_report_versions.py  003_add_seo_audits.py
app/: main.py
app/application/usecases/: get_report.py  submit_analysis.py
app/core/: config.py  events.py  logging.py
app/domain/: entities.py  report_version.py  types.py
app/infrastructure/: s3_storage.py  storage.py
app/infrastructure/db/: audit_repository.py  base.py  report_repository.py  repositories.py  (+1 more)
app/schemas/: analysis_schemas.py  audit_schemas.py  report_schemas.py  request_response.py
app/services/: backlink_service.py  competitor_service.py  core_web_vitals_service.py  dns_service.py  image_analysis_service.py  keyword_service.py  llm_service.py  performance_monitoring_service.py  report_service.py  seo_evaluator_service.py  seo_report_service.py  seo_scraper_service.py
app/tasks/: celery_app.py  report_packaging_worker.py  tasks.py
frontend/: README.md  SETUP_COMPLETE.md  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  validate-setup.js
tests/: conftest.py  test_analysis_endpoints.py  test_analysis_pipeline.py  test_analyze_flow.py  test_health.py  test_report_versioning.py  test_reports.py  test_repositories.py
tests/services/: test_competitor_service.py  test_keyword_service.py  test_llm_service.py
(+32 files in other folders)
